what the replit doing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["ConorSTRICKLAN1 <<>>"]
 python = "^3.8"
 guizero = "^1.2.0"
 Flask = "^2.0.2"
+pygame = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 
